support filtering by gender  #35
add another combo on per-WOD leaderboard

--- a/cft_calc/src/main/webapp/app/dashboard/dashboard.html
+++ b/cft_calc/src/main/webapp/app/dashboard/dashboard.html
@@ -83,6 +83,11 @@
 							ng-change='vm.onWorkoutChanged()' >
 								<!-- option value="">choose workout...</option-->
 							</select>
+							<select data-ng-model="vm.filter_gender" 
+							ng-change='vm.onGenderChanged()' >
+								<option value="Men">Men</option>
+								<option value="Women">Women</option>
+							</select>
 						</div>
 
                         <div class="widget-content text-center text-info">
