support filtering by gender #35
filter also the "leaderboard by workout" by gender

--- a/cft_calc/src/main/webapp/app/dashboard/dashboard.html
+++ b/cft_calc/src/main/webapp/app/dashboard/dashboard.html
@@ -101,7 +101,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr data-ng-repeat="p in vm.traineesPerWorkout">
+                                    <tr data-ng-repeat="p in vm.traineesPerWorkout | filter: { male: (vm.filter_gender == 'Men') }">
                                         <td>{{$index+1}}</td>
                                         <td>{{p.firstName}}</td>
                                         <td>{{p.lastName}}</td>
