add workout: user tries to enter 4:44 (instead in secs) #54

--- a/cft_calc/src/main/webapp/app/workouts/addworkout.html
+++ b/cft_calc/src/main/webapp/app/workouts/addworkout.html
@@ -16,7 +16,7 @@
 								       		ng-change='vm.onWorkoutChanged()' />
 								    </p>
 	                                <p class="row">
-	                                    <input type="text" data-ng-model="vm.workout.result" placeholder="Enter the result (see notes)" required/>
+	                                    <input type="number" data-ng-model="vm.workout.result" placeholder="Enter the result (see notes)" required/>
 	                                    <label>{{vm.workout.units}}</label>
 	                                </p>
 	                                <p class="row">
