"PR workouts": show "kg" in units, and not "reps" #58

--- a/cft_calc/src/main/webapp/app/admin/admin.html
+++ b/cft_calc/src/main/webapp/app/admin/admin.html
@@ -11,10 +11,13 @@
                                     <input type="text" data-ng-model="vm.workout.name" placeholder="Enter workout name" required/>
 							    </p>
                                 <p class="row">
-                                    <input type="text" data-ng-model="vm.workout.repetitionBased" placeholder="is it repetition based?" required />
+                                    <input type="number" data-ng-model="vm.workout.repetitionBased" placeholder="is it repetition based?" required />
                                 </p>
                                 <p class="row">
                                     <input type="text" data-ng-model="vm.workout.description" placeholder="Enter workout description" required />
+                                </p>
+                                <p class="row">
+                                    <input type="text" data-ng-model="vm.workout.units" placeholder="Enter workout units" required />
                                 </p>
                             </div>
                             <div class="container-fluid">
