UI login forms improve #32

--- a/cft_calc/src/main/webapp/app/authentication/login.html
+++ b/cft_calc/src/main/webapp/app/authentication/login.html
@@ -19,10 +19,10 @@
       
       <div class="col-md-6">
 				<div class="login signup">
-					<h3>benchmarkr</h3>
+					<!-- h3>benchmarkr</h3-->
 				
-					<div style="margin-top: 25px">
-					Compare your CrossFit RX-benchmark results with other CrossFitters all around the world!<br>
+					<div class="app-description" style="margin-top: 25px">
+					Compare your CrossFit RX-benchmarks and PRs with other CrossFitters all around the world.<br>
 					<br>
 					</div>
 				</div>
