--- a/cft_calc/src/main/webapp/app/workouts/workouts.html
+++ b/cft_calc/src/main/webapp/app/workouts/workouts.html
@@ -56,7 +56,7 @@
 
 	            <div class="row">
 	                <div class="col-md-6">
-	                    <div class="widget wgreen">
+	                    <div class="widget wblue">
 	                        <div data-cc-widget-header title="Update Profile"></div>
 	
 	                        <div class="widget-content user">
