--- a/cft_calc/src/main/webapp/app/dashboard/dashboard.html
+++ b/cft_calc/src/main/webapp/app/dashboard/dashboard.html
@@ -10,7 +10,7 @@
                                 <span class="bold">May 18 - 19, 2015</span> Castle Resort, Neverland
                             </div>
                             <div class="clearfix"></div>
-                        </li-->
+                        </li>
 
                         <li class="borange">
                             <div class="pull-left"><i class="fa fa-user"></i></div>
@@ -26,7 +26,7 @@
                             </div>
                             <div class="clearfix"></div>
                         </li>
-                        <!-- li class="app_link">
+                        <li class="app_link">
                             <div class="pull-left">
                             	<a href="https://www.facebook.com/cbenchmarkr" class="project-link"><img class="app_link" src="../../content/images/Facebook_Icon_2.png" alt="Facebook page"></a>       
                             </div>
