--- a/cft_calc/src/main/webapp/index.html
+++ b/cft_calc/src/main/webapp/index.html
@@ -82,6 +82,7 @@
 
     <!-- app -->
     <script src="app/dashboard/dashboard.js"></script>
+    <script src="app/dashboard/insights.js"></script>
     <script src="app/layout/shell.js"></script>
     <script src="app/layout/sidebar.js"></script>
     <script src="app/layout/topnav.js"></script>
