--- a/cft_calc/src/main/webapp/app/workouts/addworkout.html
+++ b/cft_calc/src/main/webapp/app/workouts/addworkout.html
@@ -16,8 +16,16 @@
 								       		ng-change='vm.onWorkoutChanged()' />
 								    </p>
 	                                <p class="row">
-	                                    <input type="number" data-ng-model="vm.workout.result" placeholder="Enter the result (see notes)" required/>
-	                                    <label>{{vm.workout.units}}</label>
+	                                    <input type="number" ng-show="!vm.show" data-ng-model="vm.workout.result" 
+	                                    		placeholder="Enter the result (kg)"
+	                                    		name='result_weight'/>
+	                                    <label ng-show="!vm.show">kg</label>
+	                                </p>
+	                                <p class="row">
+										<input type="text" ng-show="vm.show" data-ng-model="vm.workout.result_time" 
+												placeholder="Enter your result mm:ss" pattern="([01]?[0-9]|2[0-3]):[0-5][0-9]"
+												name='result_time'/>
+	                                    <label ng-show="vm.show">mm:ss</label>
 	                                </p>
 	                                <p class="row">
 						                <input type="date" name="dob" ng-model="vm.workout.date" placeholder="dd-MM-yyyy" required />
@@ -47,7 +55,10 @@
 	                                    is the number of total repititions: 10 rounds * 30 (5 pullups, 10 pushups and 15 squats) + 4 = 304.   
 								    </p>
 	                                <p class="row">
-										If it is time-based WOD, the result in the <b>number of seconds</b>.
+										If it is time-based WOD, the result in format of <b>(minutes):(seconds)</b>, for example 01:12.
+								    </p>
+	                                <p class="row">
+										In the PR results, such as dead-lift, the result in <b>kilograms</b>, where <b>1 lb = 0.45 kg</b>.
 								    </p>
 	                            </div>
 	                        </div>
