--- a/cft_calc/src/main/webapp/app/dashboard/dashboard.html
+++ b/cft_calc/src/main/webapp/app/dashboard/dashboard.html
@@ -55,6 +55,7 @@
                                         <th>#</th>
                                         <th>First Name</th>
                                         <th>Last Name</th>
+                                        <th># Workouts</th>
                                         <th>Grade</th>
                                     </tr>
                                 </thead>
@@ -63,6 +64,7 @@
                                         <td>{{$index+1}}</td>
                                         <td>{{p.firstName}}</td>
                                         <td>{{p.lastName}}</td>
+                                        <td>{{p.numerOfWorkouts}}</td>
                                         <td>{{p.totalGrade}}</td>
                                     </tr>
                                 </tbody>
