--- a/cft_calc/src/main/webapp/app/workouts/addworkout.html
+++ b/cft_calc/src/main/webapp/app/workouts/addworkout.html
@@ -23,7 +23,7 @@
 	                                </p>
 	                                <p class="row">
 										<input type="text" ng-show="vm.show" data-ng-model="vm.workout.result_time" 
-												placeholder="Enter your result mm:ss" pattern="([01]?[0-9]|2[0-3]):[0-5][0-9]"
+												placeholder="Enter your result mm:ss" pattern="([0-9]|[0-5][0-9]):[0-5][0-9]"
 												name='result_time'/>
 	                                    <label ng-show="vm.show">mm:ss</label>
 	                                </p>
