--- a/cft_calc/src/main/webapp/index.html
+++ b/cft_calc/src/main/webapp/index.html
@@ -23,7 +23,7 @@
         }
     </script>
 
-    <link href="content/ng-table.css" rel="stylesheet" />
+    <!-- link href="content/ng-table.css" rel="stylesheet" /-->
     <link href="content/ie10mobile.css" rel="stylesheet" />
     <link href="content/bootstrap.min.css" rel="stylesheet" />
     <link href="content/font-awesome.min.css" rel="stylesheet" />
